Fixing home first section size on mobile.

--- a/src/Styles/Pages/Home.less
+++ b/src/Styles/Pages/Home.less
@@ -14,7 +14,6 @@
 		padding: @space-lg @space-sm;
 
 		&.First {
-			min-height: 100vh;
 			top: -@headerHeight;
 			padding-top: @space-lg;
 			margin-bottom: -@headerHeight;
